# metaworks

./: .gitignore  CMakeLists.txt  Readme  main.cpp
include/: apply.hpp  defines.hpp  forms.hpp  info.hpp  kind.hpp  metaworks.hpp  namesq.hpp  trace.hpp
test/: CMakeLists.txt  atom_test.cpp  form_test.cpp  info_test.cpp
